--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     401K: <input type="number"><br>
 <br>
 <br>
-<button type="button" >Calculate</button> 
+<button type="submit" style="color:blueviolet;" >Calculate</button> 
 <br>
 <br>
 <hr>
