--- a/v0.html
+++ b/v0.html
@@ -9,53 +9,28 @@
 
     <h1 style="color: navy;">Retirement Calc</h1>
     
-    <h3>My Past Journey:</h3> 
-    <table>
-      <tr>
-        <th>Version</th>
-        <th>Learning</th>
-        <th>Link</th>
-      </tr>
-      <tr>
-        <td>v0</td>
-        <td>Learn HTML, boilerplate, static data</td>
-        <td>
-          <a href="./v0.html">here
-        </a>
-      </td>
-      </tr>
-      <tr>
-        <td>v1</td>
-        <td>Versions, buttons, and hosting</td>
-        <td>
-          <a href="./v1.html">here
-        </a>
-      </td>
-      </tr>
-    </table>   
-
-    <hr>
-    <h4>Basic Info</h4>
+    <h2>Basic Info</h2>
     Your age: <input type="number"><br>
     Your annual income: <input type="number"><br><br> 
     
-    <h4>Your Spending</h4> 
+    <h2>Your Spending</h2> 
     Housing: <input type="number"><br>
     Food: <input type="number"><br>
     Personal: <input type="number"><br>
 
-    <h4>Your Assets</h4> 
+    <h2>Your Assets</h2> 
     Brokerage: <input type="number"><br>
     House equity: <input type="number"><br>
     401K: <input type="number"><br>
 <br>
 <br>
-<button type="submit" style="color:blueviolet;">Calculate</button>
+<button type="submit" style="color:blueviolet;" >Calculate</button> 
 <br>
 <br>
 <hr>
 <br>
-<h2 style="color: navy;">Results</h2>
+
+<h2>Results</h2>
 <table>
     <tr>
       <td></td>
@@ -93,5 +68,7 @@
       <td>$10</td>
     </tr>
   </table>
+  
+
 </body>
 </html>
