--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <td>v2</td>
         <td>Intro to CSS</td>
         <td>
-          <a href="./v2.html">here
+          <a href="./index2.html">here
         </a>
       </td>
       </tr>
