--- a/0scratchpad.html
+++ b/0scratchpad.html
@@ -17,7 +17,7 @@
             display: flex;
             position: fixed;
             flex-wrap: wrap;
-            max-height: 20vh;
+            max-width: 480px;
             font-size: 1em;
             top: 10vh;
             overflow-wrap: break-word;
