--- a/carousell.html
+++ b/carousell.html
@@ -8,43 +8,34 @@
         
         body {
             background-color: black;
-            height: 100vh;
-            font-family: Mukta;
+            color: white;
         }
 
-        .page {
-            display: flex;
+        h1 {
+            max-width: 400px;
+            position: fixed;
+            font-size: 1em;
+            top: 10vh;
+            margin: 10%;
         }
 
         .header {
-            display: flex;
-            flex-direction: column;
-            color: white;
-            align-items: center;
-            justify-content: flex-start;
-            width: 100%;
-            height: 100%;
-            position: fixed;
-            flex-wrap: wrap;
-        }
-
-        .subtitle {
-            font-size: .8em;
+            font-size: 1.75em;
         }
 
         .img-track {
             display: flex;
-            height: 100%;
-            width: 100%;
-            flex-wrap: no-wrap;
-            gap: 8vmin;
-            margin-top: 40%;    
+            gap: 6vw;
+            margin-top: 60vh;
+            flex-wrap: nowrap;
+            margin-left: 10vh;
+            max-width: 400px;
         }
-        
+
         .box {
+            background-color: white;
             height: 100px;
             width: 100px;
-            filter: grayscale();
         }
 
     </style>
@@ -53,11 +44,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="page">
-    <div class="header">
-        <h1 class="title">What you should see</h1>
-        <h2 class="subtitle">A responsive site. With the header and paragaph on top, followed by a scrollable carousell of Babka images. All text should be fixed and NOT move, while you scroll through the image track. Images are the same sizes and grayscaled, with some repeats.</h2>
-    </div>  
+    <h1><span class="header">What you should see</span><br><br>A responsive site. With the header and paragaph on top, followed by a scrollable carousell of Babka images. All text should be fixed and NOT move, while you scroll through the image track. Images are the same sizes and grayscaled, with some repeats.</h1>
     <div class="img-track">
         <div><img class="box" src="./Assets/img1.jpeg"></div>
         <div><img class="box" src="./Assets/img2.jpg"></div>
@@ -78,6 +65,5 @@
         <div><img class="box" src="./Assets/img8.jpg"></div>
         <div><img class="box" src="./Assets/img9.jpeg"></div>
     </div>
-</div>
 </body>
 </html>
