--- a/carousell.html
+++ b/carousell.html
@@ -36,6 +36,7 @@
             background-color: white;
             height: 100px;
             width: 100px;
+            filter: grayscale();
         }
 
     </style>
